test/visibility/except/exceptModuleItself.good
exceptModuleItself.chpl:6: In function 'main':
exceptModuleItself.chpl:7: error: Bad identifier in 'except' clause, no known 'Toolbox' defined in 'Toolbox'
